# kmibot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example-config.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
bot/: __main__.py  client.py  config.py
bot/modules/: ferry.py  module.py
bot/modules/pub/: __init__.py  commands.py  views.py
kmibot/: __main__.py  api.py  app.py  client.py  config.py
kmibot/modules/: __init__.py  ferry.py  module.py  sown_meeting.py
kmibot/modules/ferry/: __init__.py  api.py  commands.py  modals.py  types.py  views.py
kmibot/modules/licence/: __init__.py  commands.py  views.py
kmibot/modules/pub/: __init__.py  commands.py  utils.py  views.py
