[tool.poetry]
name = "kmibot"
version = "0.1.0"
description = ""
authors = ["Dan Trickey <git@trickey.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dateparser = "^1.2.0"
"discord.py" = "^2.3.2"
pydantic = "^2.5"
pydantic-settings = "^2.1.0"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1"
mypy = "^1"
types-dateparser = "^1.1.4.10"

[tool.ruff]
target-version = "py39"
line-length = 100

select = [
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "COM",
    "DJ",
    "DTZ",
    "E",
    "F",
    "FBT",
    "I",
    "N",
    "S",
    "T10",
    "UP",
    "W",
]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "B009",    # Do not call `getattr` with a constant attribute value.
    "COM812",  # Trailing comma missing (conflicts with ruff format)
    "S101",    # S101 Use of `assert` detected
]

[tool.mypy]
python_version = "3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
